Added total average rating and percent invited to LoiRating review modal.

--- a/app/views/loi_forms/show.html.erb
+++ b/app/views/loi_forms/show.html.erb
@@ -116,6 +116,9 @@
                         </tr>
                     </tbody>
                 </table>
+                <h4>Total Average Rating: {{ totalAverage }}</h4>
+                <h4>Invite to submit RFP: {{ percentInvited }}% Yes / {{ percentNotInvited }}% No</h4>
+                <
             </div>
             <div class="modal-footer">
                 <button class="btn btn-warning" type="button" ng-click="closeModal()">Close</button>
