--- a/app/views/partials/fte_partials_show/_challenges_board.html.erb
+++ b/app/views/partials/fte_partials_show/_challenges_board.html.erb
@@ -4,14 +4,14 @@
   </div>
   <br>
   <div class="col-md-1">
-    <input type="number" class="form-control" name="actual_staff_board" placeholder="FTEs (actual)" min="0" value="<%= @loi_form.actual_staff_board %>" ng-model="boardActual">
+    <input type="number" class="form-control" name="actual_staff_board" placeholder="FTEs (actual)" min="0" value="<%= @loi_form.actual_staff_board %>">
   </div>
 
   <div class="col-md-1">
-    <input type="number" class="form-control" name="current_staff_board" placeholder="FTEs (current)" min="0" value="<%= @loi_form.current_staff_board %>" ng-model="boardCurrent">
+    <input type="number" class="form-control" name="current_staff_board" placeholder="FTEs (current)" min="0" value="<%= @loi_form.current_staff_board %>">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" name="projected_staff_board" placeholder="FTEs (projected)" min="0" value="<%= @loi_form.projected_staff_board %>" ng-model="boardProjected">
+    <input type="number" class="form-control" name="projected_staff_board" placeholder="FTEs (projected)" min="0" value="<%= @loi_form.projected_staff_board %>">
   </div>
   <br>
 </div>
