--- a/app/views/partials/fte_partials_show/_challenges_fund.html.erb
+++ b/app/views/partials/fte_partials_show/_challenges_fund.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="well col-md-9"><h4>Fund Development</h4></div><br>
   <div class="col-md-1">
-    <input type="number" class="form-control" name="actual_staff_fund" placeholder="FTEs (actual)" min="0" value="<%= @loi_form.actual_staff_fund %>" ng-model="fundActual">
+    <input type="number" class="form-control" name="actual_staff_fund" placeholder="FTEs (actual)" min="0" value="<%= @loi_form.actual_staff_fund %>">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" name="current_staff_fund" placeholder="FTEs (current)" min="0" value="<%= @loi_form.current_staff_fund %>" ng-model="fundCurrent">
+    <input type="number" class="form-control" name="current_staff_fund" placeholder="FTEs (current)" min="0" value="<%= @loi_form.current_staff_fund %>">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" name="projected_staff_fund" placeholder="FTEs (projected)" min="0" value="<%= @loi_form.projected_staff_fund %>" ng-model="fundProjected">
+    <input type="number" class="form-control" name="projected_staff_fund" placeholder="FTEs (projected)" min="0" value="<%= @loi_form.projected_staff_fund %>">
   </div>
   <br>
 </div>
