--- a/app/views/partials/fte_partials_show/_total_fte_count.html.erb
+++ b/app/views/partials/fte_partials_show/_total_fte_count.html.erb
@@ -4,7 +4,7 @@
   </div>
   <br>
   <div class="col-md-1">
-    <input type="number" class="form-control" name="actual_staff_total" placeholder="2015" min="0" value="{{boardActual + boardCurrent + boardProjected}}">
+    <input type="number" class="form-control" name="actual_staff_total" placeholder="2015" min="0" value="<%= @loi_form.actual_staff_total %>">
   </div>
   <div class="col-md-1">
     <input type="number" class="form-control" name="current_staff_total" placeholder="2016 - This figure should match the Employees field in section 2." min="0" value="<%= @loi_form.current_staff_total %>">
