--- a/app/views/partials/_challenges_marketing.html.erb
+++ b/app/views/partials/_challenges_marketing.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="well col-md-9"><h4>Marketing</h4></div><br>
   <div class="col-md-1">
-    <input type="number" class="form-control" name="actual_staff_marketing" placeholder="FTEs (actual)" min="0" value="<%= @loi_form.actual_staff_marketing %>">
+    <input type="number" class="form-control" name="actual_staff_marketing" placeholder="FTEs (actual)" min="0" ng-init="marketingActual=<%= @loi_form.actual_staff_marketing %>" ng-model="marketingActual">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" name="current_staff_marketing" placeholder="FTEs (current)" min="0" value="<%= @loi_form.current_staff_marketing %>">
+    <input type="number" class="form-control" name="current_staff_marketing" placeholder="FTEs (current)" min="0" ng-init="marketingCurrent=<%= @loi_form.current_staff_marketing %>" ng-model="marketingCurrent">
   </div>
   <div class="col-md-1">
-    <input type="number" class="form-control" name="projected_staff_marketing" placeholder="FTEs (projected)" min="0" value="<%= @loi_form.projected_staff_marketing %>">
+    <input type="number" class="form-control" name="projected_staff_marketing" placeholder="FTEs (projected)" min="0" ng-init="marketingProjected=<%= @loi_form.projected_staff_marketing %>" ng-model="marketingProjected">
   </div>
   <br>
 </div>
