made requested edits to section 6 instruction text

--- a/app/views/partials/_challenges_header.html.erb
+++ b/app/views/partials/_challenges_header.html.erb
@@ -1,14 +1,14 @@
 <h3 class="form-title well">6. Organizational Capacity Challenges</h3>
-
-<div class="row text-center">
-  <div class="col-md-9"></div>
-  <div class="col-md-3">Please provide the total amount of time you and your staff spend in each focus area expressed in FTEs: </div>
-</div>
-<br>
+<h4>In this section, we want to get an idea of how you organization allocates its staff time, as well as to understand what your key organizational challenges are in different areas.</h4>
+<p>An FTE is the hours worked by one employee on a full-time basis. The concept is used to convert the hours worked by several part-time employees into the hours worked by full-time employees. On an annual basis, an FTE is considered to be 2,080 hours, which is calculated as: 8 hours per day x 5 work days per week.</p>
+<p>For each section, please indicate how much time your organization allocates to that focus area in FTEs. Please also indicate up to 3 challenges your organization has in the focus area. Do not feel obligated to provide challenges in each area. We are interested in your most significant issues. We are looking for quality, not quantity.</p><hr>
 <div class="row form-title text-center">
-  <!-- <div class="col-md-1"></div> -->
-  <div class="col-md-2">Focus Area</div>
-  <div class="col-md-5">Please provide a short description (preferably bullets) of your top 1-3 challenge(s) in each area that applies</div>
+  <div class="col-md-9"></div>
+  <div class="col-md-3">
+    <p>Please provide the total amount of time you and your staff spend in each focus area expressed in FTEs:</p> </div>
+</div>
+<div class="row text-center">
+  <div class="col-md-7"></div>
   <div class="col-md-2"><strong>Priority:</strong> Rank each as high, medium, or low</div>
   <div class="col-md-1">2015 Staffing (actual)</div>
   <div class="col-md-1">2016 Staffing (current)</div>
