Changed stats display on LoiRating review modal.

--- a/app/views/loi_forms/show.html.erb
+++ b/app/views/loi_forms/show.html.erb
@@ -117,7 +117,7 @@
                     </tbody>
                 </table>
                 <h4>Total Average Rating: {{ totalAverage }}</h4>
-                <h4>Invite to submit RFP: {{ percentInvited }}% Yes / {{ percentNotInvited }}% No</h4>
+                <h4>Invite to submit RFP: {{ totalYes }} Yes / {{ totalMaybe }} Maybe / {{ totalNo }} No</h4>
                 <
             </div>
             <div class="modal-footer">
