--- a/app/views/loi_forms/show.html.erb
+++ b/app/views/loi_forms/show.html.erb
@@ -1,5 +1,5 @@
 <div ng-controller="LoiFormController" ng-init="setup(<%= params[:id] %>, <%= current_user.id %>)">
-    <script type="text/ng-template" id="loiModalContent.html">
+    <script type="text/ng-template" id="loiModalContent.html"> <!-- script tags contain html templates for modals, note the id -->
         <div class="modal-header">
             <h3 class="modal-title">Rate {{ loiName }}</h3>
         </div>
