added comment about partials on loi show page

--- a/app/views/loi_forms/show.html.erb
+++ b/app/views/loi_forms/show.html.erb
@@ -158,7 +158,7 @@
     <%= render partial: "partials/concerns" %>
 
 <!-- section 6 -->
-<!-- </fieldset> -->
+<!-- These fte_partials_show partials don't have angular -->
 <div ng-app="app">
     <div ng-controller="fteCtrl">
         <%= render partial: "partials/challenges_header" %>
@@ -172,7 +172,6 @@
         <%= render partial: "partials/fte_partials_show/total_fte_count" %>
     </div>
 </div>
-<!-- <fieldset disabled="disabled"> -->
 <!-- additional comments section 7 -->
 <%= render partial: "partials/additional" %>
 
